    compatible with the one provided by the standard :mod:`unittest` module
    in Python >= 3.2
  * use :meth:`tests.common.PyTablesTestCase.assertWarns` as context manager
    when appropriate
  * use the :func:`unittest.skipIf` decorator when appropriate
  * new :class:tests.comon.TestFileMixin: class


.. _unittest2: https://pypi.python.org/pypi/unittest2


Bugs fixed
----------

- Fixed compatibility problems with numpy 1.9 and 1.10-dev
  (closes :issue:`362` and :issue:`366`)
- Fixed compatibility with Cython_ >= 0.20 (closes :issue:`386` and
  :issue:`387`)
- Fixed support for unicode node names in LRU cache (only Python 2 was
  affected). Closes :issue:`367` and :issue:`369`.
- Fixed support for unicode node titles (only Python 2 was affected).
  Closes :issue:`370` and :issue:`374`.
- Fixed a bug that caused the silent truncation of unicode attributes
  containing the '\0' character. Closes :issue:`371`.
- Fixed :func:`descr_from_dtype` to work as expected with complex types.
  Closes :issue:`381`.
- Fixed the :class:`tests.test_basics.ThreadingTestCase` test case.
  Closes :issue:`359`.
- Fix incomplete results when performing the same query twice and exhausting
  the second iterator before the first. The first one writes incomplete
  results to *seqcache* (:issue:`353`)
- Fix false results potentially going to *seqcache* if
  :meth:`tableextension.Row.update` is used during iteration
  (see :issue:`353`)
- Fix :meth:`Column.create_csindex` when there's NaNs
- Fixed handling of unicode file names on windows (closes :issue:`389`)
- No longer not modify :data:`sys.argv` at import time (closes :issue:`405`)
- Fix a performance issue on NFS (closes :issue:`402`)


Other changes
-------------

- The minimum Cython_ version is now 0.14.


.. _Cython: http://cython.org



  **Enjoy data!**

  -- The PyTables Developers


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 72
.. End: